--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+  integrity="sha384-xodZBntMAsAIl2ztF9g0jpUpvnFOWzZVR3kpnn0l3y5RyI5PlF0xAmo0IEJk7IQ+"
+  crossorigin=""
+/>
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -24,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ip Address</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
